--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
-<body>fgfdgfdgfdgfd</body>
+<body>
+  <img src="smiley.gif" alt="Smiley face" height="42" width="42">
+  
+  </body>
 
 </html>
