--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-  <img src="https://www.google.com/search?q=cat+photo&client=safari&rls=en&tbm=isch&source=iu&ictx=1&fir=a7ZqxFshItx5jM%253A%252ChVpvvL-HxQGRYM%252C_&usg=AI4_-kQGvvQ14sc5P_94iumNxvYig_QGOw&sa=X&ved=2ahUKEwiJ1MOftMDfAhWCsnEKHaMMCpQQ9QEwAHoECAMQBA#imgrc=a7ZqxFshItx5jM:" alt="Smiley face" height="42" width="42">
+  this is amazing
   
   </body>
 
