--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h2>Insert Image</h2>
 
-<img class="imageTest" src="https://www.w3schools.com/images/w3schools_green.jpg" alt="W3Schools.com" style="width:104px;height:142px;">
+<img class="imageTest" src="raysona1.github.io/P8040043.JPG" alt="W3Schools.com" style="width:104px;height:142px;">
 
 </body>
 </html>
