--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="raysona1.github.io/main.css">
   </head>
 <body>
-
+<img class="imageTest" src=raysona1.github.io/vcm_s_kf_repr_640x480.JPG
+  
 <img class="imageTest" src="raysona1.github.io/P8040043.JPG" alt="W3Schools.com">
 
 </body>
