--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="raysona1.github.io/main.css">
-  </head>
+  </head Steve you're a tjop>
 <body>
 <img class="imageTest" src=raysona1.github.io/vcm_s_kf_repr_640x480.JPG
      
