--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="raysona1.github.io/main.css">
   </head>
+  <body> Steve You're a Tjop </body>
 <body>
 <img class="imageTest" src=raysona1.github.io/vcm_s_kf_repr_640x480.JPG
      
