--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   
 <img class="imageTest" src="raysona1.github.io/P8040043.JPG" alt="W3Schools.com">
     
+<body>
     
+<img class="imageTest" src=raysona1.github.io/003.JPG
 
 </body>
 </html>
