--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      
 <body>
     
-    <img class="imageTest" src=raysona1.github.io/vcm_s_kf_repr_640x480.JPG
+<img class="imageTest" src=raysona1.github.io/vcm_s_kf_repr_640x480.JPG> <img class="imageTest" src=raysona1.github.io/IMG_0005_2.JPG
 
 </body>
 </html>
