--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <body> Steve You're a Tjop </body>
+    <body> Welcome to YouTjop.com </body>
+    
+    <body> You're a Tjop </body>
   <head>
     <link rel="stylesheet" href="raysona1.github.io/main.css">
   </head>
