--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     
-# **Welcome to YouTjop.com**
+#Welcome to YouTjop.com
     
     <body> You're a Tjop </body>
   <head>
