--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
-    
-<Heading> Welcome to YouTjop.com </Heading>
+ <head> 
+	<title>Bold</title> 
+</head> 
+<body> 
+	<!--Text in Strong-->	
+	<p><strong>Welcome to YouTjop.com</strong></p> 
+</body> 
+</html>    
     
     <body> You're a Tjop </body>
   <head>
