--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <body> 
 	<!--Text in Strong-->	
 	<p><strong>Welcome to YouTjop.com</strong></p> 
+	
+	  <font size="+2">Welcome to YouTjop.com.</font>
 </body> 
 </html>    
     
