--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
  <head> 
 	<title>Bold</title> 
 </head> 
-<body> 
-	<!--Text in Strong-->	
-	<p><strong>Welcome to YouTjop.com</strong></p> 
+<body>
 	
-	  <font size="+2">Welcome to YouTjop.com.</font>
+	  <font size="+5">Welcome to YouTjop.com.</font>
 </body> 
 </html>    
     
-    <body> You're a Tjop </body>
+    <font size="+2">You're a Tjop.</font>
+
   <head>
     <link rel="stylesheet" href="raysona1.github.io/main.css">
   </head>
