--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
  <head> 
-	<title>Bold</title> 
+	<title>YouTjop</title> 
 </head> 
 <body>
 	
 	  <font size="+5">Welcome to YouTjop.com.</font>
 </body> 
-</html>    
+	
+<br>
+<hr>
+<br>
     
     <font size="+2">You're a Tjop.</font>
 
