--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
     
-<img src="raysona1.github.io/IMG_0005_2.JPG" alt="ski"> 
+<img src="raysona1.github.io/IMG_0005_2.JPG" alt="ski" width="5" height="7"> 
 
 <body>						 
 						 
