--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
  <head> 
-	<title>YouTjop </title> 
+	<title>YouTjop &trade;</title> 
 </head> 
 <body>
 	
-	  <font size="+5">Welcome to YouTjop.com &trade;</font>
+	  <font size="+5">Welcome to YouTjop.com </font>
 </body> 
 	
 <br>
