--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
 <img src="raysona1.github.io/003.JPG" alt="French" width="950" height="700">
      
 <hr>
+
+<img src="raysona1.github.io/IMG_2056.jpg" alt="boat" width="475" height="700">
+	
+<img src="raysona1.github.io/IMG_2056.jpg" alt="boat" width="475" height="700">
+	
+<hr>
     
 <img src="raysona1.github.io/vcm_s_kf_repr_640x480.JPG" alt="wig" width="950" height="700">
 
