--- a/index.html
+++ b/index.html
@@ -41,8 +41,13 @@
 <hr>
     
 <img src="raysona1.github.io/vcm_s_kf_repr_640x480.JPG" alt="wig" width="950" height="700">
+	
+<hr>
 
-<img src="raysona1.github.io/003.JPG" alt="French" width="950" height="700">
+<img src="raysona1.github.io/IMG_2691.JPG" alt="Fam" width="950" height="700">
 
+<hr>
+
+	<font size="+3">You Tjops... </font>
 </body>
 </html>
